styled the p, ol, ul, to make them more readable

--- a/style.css
+++ b/style.css
@@ -17,3 +17,8 @@ a:hover {
     font-size: 30px;
     color: #696969;
 }
+p, ul, ol {
+    font-size: 20px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
